# PonyExpress

./: README.md  pyproject.toml  requirements.txt
backend/: auth.py  database.py  entities.py  fake_db.json  main.py  pony_express.db
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Login.jsx  Registration.jsx  chatId.jsx  chats.jsx  profile.jsx
frontend/src/context/: auth.jsx  user.jsx
tests/: conftest.py  main_test.py
